--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "jsonwebtoken": "^8.5.1",
     "jwt-decode": "^4.0.0",
     "lodash": "^4.17.21",
+    "moment": "^2.30.1",
     "mongoose": "^7.6.3",
     "mongoose-delete": "^1.0.1",
     "morgan": "~1.9.1",
