--- a/.env
+++ b/.env
@@ -1,3 +1,6 @@
 MONGODB_CONNECTION = mongodb://127.0.0.1:27017/dev
 SALT=$2a$09$cWJAM9moHJ.Fa/xANLU7seZANZUXWjTVULixOPOHXN8Lw33NLSzwW
 SECRET=mysecret%$sha256/!alpha$%$bang.etae
+
+
+# mongodb+srv://hamzay050:hamza2712@cluster0.tj9e2so.mongodb.net/
