--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "canvas": "^2.11.2",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
@@ -15,6 +16,8 @@
     "ejs": "^3.1.9",
     "express": "~4.16.1",
     "helmet": "^7.0.0",
+    "html-pdf": "^3.0.1",
+    "html-to-image": "^1.11.11",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
     "joi": "^17.11.0",
@@ -25,7 +28,9 @@
     "mongoose": "^7.6.3",
     "mongoose-delete": "^1.0.1",
     "morgan": "~1.9.1",
+    "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.7",
-    "nodemon": "^3.0.1"
+    "nodemon": "^3.0.1",
+    "puppeteer": "^22.3.0"
   }
 }
